<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tan_background"
        android:orientation="vertical"
        tools:context="com.mwysocka.italiano.MainActivity">

        <!-- Numbers category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_numbers">

            <LinearLayout
                android:id="@+id/numbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/category_numbers" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_numbers_white"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_numbers_red"/>

            </LinearLayout>
        </FrameLayout>

        <!-- Family category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_family">

            <LinearLayout
                android:id="@+id/family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/category_family" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_family_white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_family_red"/>

            </LinearLayout>
        </FrameLayout>

        <!-- Colors category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_colors">

            <LinearLayout
                android:id="@+id/colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/category_colors" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_colors_white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_colors_red"/>

            </LinearLayout>
        </FrameLayout>

        <!-- Phrases category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_phrases">

            <LinearLayout
                android:id="@+id/phrases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/category_phrases" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_phrases_white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_phrases_red"/>

            </LinearLayout>
        </FrameLayout>

        <!-- Food category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_food">

            <LinearLayout
                android:id="@+id/food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/category_food" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_food_white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_food_red"/>

            </LinearLayout>
        </FrameLayout>

        <!-- Calendar category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_calendar">

            <LinearLayout
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/category_calendar" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_calendar_white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_calendar_red"/>

            </LinearLayout>
        </FrameLayout>

        <!-- Weather category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_weather">

            <LinearLayout
                android:id="@+id/weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/category_weather" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_weather_white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_calendar_red"/>

            </LinearLayout>
        </FrameLayout>

        <!-- Words category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_words">

            <LinearLayout
                android:id="@+id/words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/category_words" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_words_white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_words_red"/>

            </LinearLayout>
        </FrameLayout>

        <!-- House category -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_house">

            <LinearLayout
                android:id="@+id/house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/category_house" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_house_white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/CategoryStyle"
                    android:background="@color/category_house_red"/>

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</ScrollView>